<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="404dp"
        android:layout_height="588dp"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="12dp">

        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="200dip"
            android:id="@+id/scatter" />

        <Button
            android:id="@+id/seven"
            android:layout_width="82dp"
            android:layout_height="40dp"
            android:layout_marginLeft="84dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="420dp"
            android:text="@string/seven" />

        <Button
            android:id="@+id/eight"
            android:layout_width="82dp"
            android:layout_height="40dp"
            android:layout_marginLeft="164dp"
            android:layout_marginStart="240dp"
            android:layout_marginTop="420dp"
            android:text="@string/eight" />

        <Button
            android:id="@+id/nine"
            android:layout_width="82dp"
            android:layout_height="40dp"
            android:layout_marginLeft="248dp"
            android:layout_marginStart="320dp"
            android:layout_marginTop="420dp"
            android:text="@string/nine" />

        <Button
            android:id="@+id/four"
            android:layout_width="82dp"
            android:layout_height="40dp"
            android:layout_marginLeft="84dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="460dp"
            android:text="@string/four" />

        <Button
            android:id="@+id/five"
            android:layout_width="82dp"
            android:layout_height="40dp"
            android:layout_marginLeft="164dp"
            android:layout_marginStart="240dp"
            android:layout_marginTop="460dp"
            android:text="@string/five" />

        <Button
            android:id="@+id/six"
            android:layout_width="82dp"
            android:layout_height="40dp"
            android:layout_marginLeft="248dp"
            android:layout_marginStart="320dp"
            android:layout_marginTop="460dp"
            android:text="@string/six" />

        <Button
            android:id="@+id/one"
            android:layout_width="82dp"
            android:layout_height="40dp"
            android:layout_marginLeft="84dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="500dp"
            android:text="@string/one" />

        <Button
            android:id="@+id/two"
            android:layout_width="82dp"
            android:layout_height="40dp"
            android:layout_marginLeft="164dp"
            android:layout_marginStart="240dp"
            android:layout_marginTop="500dp"
            android:text="@string/two" />

        <Button
            android:id="@+id/three"
            android:layout_width="82dp"
            android:layout_height="40dp"
            android:layout_marginLeft="248dp"
            android:layout_marginStart="320dp"
            android:layout_marginTop="500dp"
            android:text="@string/three" />

        <Button
            android:id="@+id/zero"
            android:layout_width="82dp"
            android:layout_height="40dp"
            android:layout_marginLeft="84dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="540dp"
            android:text="@string/zero" />

        <Button
            android:id="@+id/decimal"
            android:layout_width="82dp"
            android:layout_height="40dp"
            android:layout_marginLeft="164dp"
            android:layout_marginStart="240dp"
            android:layout_marginTop="540dp"
            android:text="@string/decimal" />

        <Button
            android:id="@+id/next"
            android:layout_width="82dp"
            android:layout_height="40dp"
            android:layout_marginLeft="248dp"
            android:layout_marginStart="320dp"
            android:layout_marginTop="540dp"
            android:text="NEXT" />

        <Button
            android:id="@+id/plot_data"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="84dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="380dp"
            android:text="PLOT DATA" />

        <TextView
            android:id="@+id/x5"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginTop="540dp"
            android:layout_marginLeft="5dp"
            android:text="x" />

        <TextView
            android:id="@+id/y5"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="540dp"
            android:text="y" />

        <TextView
            android:id="@+id/x4"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginTop="500dp"
            android:layout_marginLeft="5dp"
            android:text="x" />

        <TextView
            android:id="@+id/y4"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="500dp"
            android:text="y" />

        <TextView
            android:id="@+id/x3"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginTop="460dp"
            android:layout_marginLeft="5dp"
            android:text="x" />

        <TextView
            android:id="@+id/y3"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="460dp"
            android:text="y"/>

        <TextView
            android:id="@+id/x2"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginTop="420dp"
            android:layout_marginLeft="5dp"
            android:text="x" />

        <TextView
            android:id="@+id/y2"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="420dp"
            android:text="y" />

        <TextView
            android:id="@+id/x1"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginTop="380dp"
            android:layout_marginLeft="5dp"
            android:text="x" />

        <TextView
            android:id="@+id/y1"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="380dp"
            android:text="y" />

        <Button
            android:id="@+id/calculator"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="84dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="380dp"
            android:text="CALCULATOR" />

    </FrameLayout>

</android.support.constraint.ConstraintLayout>


